--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "class-variance-authority": "^0.7.0",
@@ -35,6 +38,7 @@
     "eslint-config-next": "14.1.3",
     "jsdom": "^24.0.0",
     "postcss": "^8",
+    "postcss-nesting": "^12.1.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "vitest": "^1.3.1"
