--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "vitest"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -24,14 +23,10 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.0.3",
-    "@tanstack/react-query": "^5.48.0",
-    "@tanstack/react-query-devtools": "^5.48.0",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
     "jose": "^5.3.0",
     "lucide-react": "^0.356.0",
     "mysql2": "^3.9.7",
@@ -47,8 +42,6 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.2.1",
-    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.12.8",
     "@types/react": "^18",
@@ -63,7 +56,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5",
-    "vitest": "^1.3.1"
+    "typescript": "^5"
   }
 }
