--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
-JWTSECRETKEY = myvet
-JWTALG = HS256 
+JWTALG="HS256"
+JWTSECRETKEY="myvet"
+MYSQLDATABASE="${{MySQL.MYSQLDATABASE}}"
+MYSQLHOST="${{MySQL.MYSQLHOST}}"
+MYSQLPASSWORD="${{MySQL.MYSQLPASSWORD}}"
+MYSQLPORT="${{MySQL.MYSQLPORT}}"
+MYSQLUSER="${{MySQL.MYSQLUSER}}"
+MYSQL_DATABASE="${{MySQL.MYSQL_DATABASE}}"
+MYSQL_PUBLIC_URL="${{MySQL.MYSQL_PUBLIC_URL}}"
